--- a/index.html
+++ b/index.html
@@ -13,10 +13,20 @@
 <body>
     <!-- Header section -->
   <header>
-        <div class="flex-container">
-            <div class="logo"></div>
-            <div class="link"></div>
-            <div class="login"></div>
+        <div class="flex-container bg-blue">
+            <div class="logo bg-blue">
+                <img src="img/logo.svg" alt="Logo-Discord">
+            </div>
+            <div class="link bg-blue flex">
+                <a href="#">Scarica</a>
+                <a href="#">Perchè Discord</a>
+                <a href="#">Nitro</a>
+                <a href="#">Sicurezza</a>
+                <a href="#">Assistenza</a>
+            </div>
+            <div class="login bg-blue flex">
+                <a class="login btn" href="#">Accedi</a>
+            </div>
         </div>
     </header>
     
@@ -24,7 +34,16 @@
 
     <main>
         <div class="blue-container">
-            <div class="lilla-box"></div>
+            <div class="lilla-box flex">
+                <h1 class="main txt-xxl">Il tuo posto per parlare</h1>
+                <br>
+                <p class="desc txt-xl"></b>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica <br> mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiaccherare ogni giorno e ritrovarsi più spesso.</p>
+                <div class="miao flex">
+                    <a class="btn-white txt-xl" href="#">&#129067; Scarica per Mac</a>
+                    <a class="btn-black" href="#">Apri nel tuo browser</a>
+                </div>
+                </div>
+            </div>
         </div>
     
         <div class="white-container">
