main section completed

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <h1 class="main txt-xxl">Il tuo posto per parlare</h1>
                 <br>
                 <p class="desc txt-xl"></b>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica <br> mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiaccherare ogni giorno e ritrovarsi più spesso.</p>
-                <div class="miao flex">
+                <div class="btn-box flex">
                     <a class="btn-white txt-xl" href="#">&#129067; Scarica per Mac</a>
                     <a class="btn-black" href="#">Apri nel tuo browser</a>
                 </div>
@@ -46,23 +46,44 @@
             </div>
         </div>
     
+        <div class="white-container flex">
+            <div class="large-box pet-photos"></div>
+            <div class="pochi-box flex">
+                <h1 class="luogo">Un luogo a<br>invito con tutto<br> lo spazio<br>necessario per<br>parlare</h1>
+                <p class="txt-xl">I server Discord sono organizzati in <br>canali tematici in cui puoi collaborare<br>  condividere o semplicemente parlare<br>della tua giornata senza intasare una<br>chat di gruppo.</p>
+            </div>
+        </div>
+
+        <div class="grey-container flex">
+            <div class="dove-box flex">
+                <h1 class="luogo-top">Dove trovarsi è <br> facile</h1>
+                <p class="txt-xl">Mettiti comodo in un canale vocale <br> quando hai tempo. Gli amici nel tuo <br> server possono vedere che sei lì e unirsi <br> istantaneamente senza dover chiamare.</p>
+            </div>
+            <div class="large-box voice"></div>
+        </div>
+
         <div class="white-container">
-            <div class="blue-box"></div>
-            <div class="light-pink-box"></div>
+            <div class="large-box coach"></div>
+            <div class="pochi-box flex">
+                <h1 class="luogo">Da pochi a un <br>
+                fandom</h1>
+                <p class="txt-xl">Dai inizio a una community di qualsiasi <br>dimensione con strumenti di <br> moderazione e accesso ai membri <br> personalizzabile. Concedi ai membri <br> poteri speciali, crea canali privati, e <br> molto altro.</p>
+            </div>
         </div>
 
-        <div class="grey-container">
-            <div class="light-pink-box"></div>
-            <div class="blue-box"></div>
+        <div class="grey-container flex">
+            <div class="green-box flex">
+                <h1 class="luogo">Tecnologia affidabile per tenersi in contatto</h1>
+                <br>
+                <p class="text-xl">Video e audio di bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda <br> gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schemo.</p>
+                <img class="chillin" src="img/item4-big.svg" alt="big-item">
+            </div>
         </div>
-
-        <div class="white-container">
-            <div class="blue-box"></div>
-            <div class="light-pink-box"></div>
-        </div>
-
-        <div class="grey-container">
-            <div class="green-box"></div>
+        <div class="pronto-container flex">
+            <div class="pronto-box flex">
+                <h2>Pronto per iniziare la tua avventura?</h2>
+                <a class="btn-blue txt-xl" href="#">&#129067; Scarica per Mac</a>
+            </div>
         </div>
     </main>
     
