--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="author" content="Matteo Cantafio">
     <meta name="description" content="Struttura Discord">
     <title>Discord</title>
-
+    <!-- FontAwesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Stylesheet -->
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -50,7 +51,7 @@
             <div class="large-box pet-photos"></div>
             <div class="pochi-box flex">
                 <h1 class="luogo">Un luogo a<br>invito con tutto<br> lo spazio<br>necessario per<br>parlare</h1>
-                <p class="txt-xl">I server Discord sono organizzati in <br>canali tematici in cui puoi collaborare<br>  condividere o semplicemente parlare<br>della tua giornata senza intasare una<br>chat di gruppo.</p>
+                <p class="server txt-xl">I server Discord sono organizzati in <br>canali tematici in cui puoi collaborare<br>  condividere o semplicemente parlare<br>della tua giornata senza intasare una<br>chat di gruppo.</p>
             </div>
         </div>
 
@@ -62,7 +63,7 @@
             <div class="large-box voice"></div>
         </div>
 
-        <div class="white-container">
+        <div class="white-container flex">
             <div class="large-box coach"></div>
             <div class="pochi-box flex">
                 <h1 class="luogo">Da pochi a un <br>
@@ -75,7 +76,7 @@
             <div class="green-box flex">
                 <h1 class="luogo">Tecnologia affidabile per tenersi in contatto</h1>
                 <br>
-                <p class="text-xl">Video e audio di bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda <br> gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schemo.</p>
+                <p class="txt-xl video">Video e audio di bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda <br> gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schemo.</p>
                 <img class="chillin" src="img/item4-big.svg" alt="big-item">
             </div>
         </div>
@@ -90,18 +91,64 @@
     <!-- Footer section -->
 
     <footer>
-        <div class="dark-grey-container">
-            <div class="pink-box"></div>
-            <div class="cian-box"></div>
-            <div class="cian-box"></div>
-            <div class="cian-box"></div>
-            <div class="cian-box"></div>
+        <div class="dark-grey-container flex">
+            <div class="posto-box flex">
+                <h2 class="posto b-words">Il tuo posto per<br>parlare<h2>
+                    <img class="it-flag" src="img/ita.png" alt="bandiera-italia">
+                    <p class="italiano">Italiano &#129083;</p>
+                    <br>
+                    <i class="fa-brands fa-xs fa-twitter" style="color: #ffffff;"></i>
+                    <i class="fa-brands fa-instagram fa-xs" style="color: #ffffff;"></i>
+                    <i class="fa-brands fa-facebook fa-xs" style="color: #ffffff;"></i>
+                    <i class="fa-brands fa-youtube fa-xs" style="color: #ffffff;"></i>
+
+            </div>
+            <div class="info-box flex">
+                <a class="btm-15 b-words" href="#">Prodotto</a>
+                <a class="btm-15"  href="#">Scarica</a>
+                <a class="btm-15"  href="#">Perchè Discord</a>
+                <a class="btm-15"  href="#">Nitro</a>
+                <a class="btm-15"  href="#">Sicurezza</a>
+                <a class="btm-15"  href="#">Assistenza</a>
+            </div>
+            <div class="info-box flex">
+                <a class="btm-15 b-words" href="#">Compagnia</a>
+                <a class="btm-15" href="#">Chi siamo</a>
+                <a class="btm-15"  href="#">Lavora con noi</a>
+                <a class="btm-15"  href="#">Marchio</a>
+                <a class="btm-15"  href="#">Redazione</a>
+                <a class="btm-15"  href="#">Negozio</a>
+            </div>
+            <div class="info-box flex">
+                <a class="btm-15 b-words" href="#">Risorse</a>
+                <a class="btm-15" href="#">Scarica</a>
+                <a class="btm-15"  href="#">Perchè Discord</a>
+                <a class="btm-15"  href="#">Nitro</a>
+                <a class="btm-15"  href="#">Sicureza</a>
+                <a class="btm-15"  href="#">Assistenza</a> 
+                <a class="btm-15"  href="#">Scarica</a>
+                <a class="btm-15"  href="#">Perchè Discord</a>
+                <a class="btm-15"  href="#">Nitro</a>
+                <a class="btm-15"  href="#">Sicurezza</a>
+                <a class="btm-15"  href="#">Assistenza</a>
+                <a class="btm-15"  href="#">Assistenza</a> 
+            </div>
+            <div class="info-box flex">
+                <a class="btm-15 b-words" href="#">Norme</a>
+                <a class="btm-15" href="#">Scarica</a>
+                <a class="btm-15"  href="#">Perchè Discord</a>
+                <a class="btm-15"  href="#">Nitro</a>
+                <a class="btm-15"  href="#">Sicureza</a>
+                <a class="btm-15"  href="#">Assistenza</a>
+            </div>
         </div>
 
         <div class="dg-flex-container">
             <div class="acqua-container">
-                <div class="ciao"></div>
-                <div class="ciao"></div>
+                <div class="footer-icons">
+                    <img src="img/logo.svg" alt="Logo-Discord">
+                </div>
+                <a class="btn bg-blue" href="#">Registrati</a>
             </div>
         </div>
     </footer>
